fixed the navbar from jumping on scroll by adding an opacity of .99 to the entire page

--- a/style.css
+++ b/style.css
@@ -69,13 +69,11 @@ body {
 }
 
 .myNavbar{
-	margin-top:0px;
 	
 }
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
+
+.band{
+	opacity: .99;
 }
 
 .pictures {
